# ai-training-sge-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  extract_embeddings.py  pyproject.toml  requirements.txt
src/ai_training_sge_data/: data_loaders.py  io.py
