[tool.poetry]
name = "ai-training-sge-data"
version = "0.1.0"
description = "This package is for setting data for ai training datasets."
authors = ["Prashant Gupta <pg20@sanger.ac.uk>; Prashant Gupta <prashant10991@gmail.com>"]
readme = "README.md"
packages = [{ include = "ai_training_sge_data", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
importlib-metadata = { version = "~=1.0", python = "<3.8" }
loguru = "^0.7.3"
tqdm = "^4.67.1"
pandas = "^2.3.3"
transformers = "^4.57.3"
torch = "^2.9.1"
einsum = "^0.3.0"
numpy = "2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ipykernel = "^6.29.5"
black = "24.8.0"
flake8 = "7.1.1"
mypy = "v1.11.0"
pre-commit = "3.8.0"
pytest = "^8.3.2"
ipywidgets = "^8.1.3"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
